static/style.css
/* ... */
.bibw #chat {
	margin-left: 25px;
}

.bibw > main > #userlist {
	margin-right: 25px;
}

.bibw #chat > div > :nth-child(2) > div:not(:first-child), .bibw ul > li > div > div {
	color: #eaeaea;
}
.bibw #chat > div > :nth-child(2) .greentext {
	color: #154DFF;
}

.bibw, .bibw ul, .bibw #window, .bibw #input, .bibw select {
	background: #222;
	color: #EEE;

}
.bibw ul > li:first-of-type {
	margin-top: 30px;
}

.bibw ul > li > i, .bibw select, .bibw footer > div > i {
	color: #DDD;
	margin-right: 5px;
}

.bibw #close, .bibw #chat > div > div:first-child, .bibw ul > li > div > div:first-child > div {
	background: none !important;
	border: none;
}

.bibw main, .bibw #window > div:first-child, .bibw footer > div, .bibw footer > div > i, .bibw ul, .bibw #close, .bibw #window, .bibw ul > li > div > div:last-child {
	border: none!important;
	background: none;
}

.bibw header {
    background: none!important;
    position: absolute;
    width: 100%;
    padding-top: 15px;
}

.bibw footer {
	background: none !important;
	margin-bottom: 20px;
    margin-right: 0;
}

.bibw ul > li > div {
	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35px, #222 35px, #222 100%);
}

.bibw #underlay {
  -webkit-filter: invert(50%) brightness(100%);
  filter: invert(50%) brightness(100%);
  background-size: 25%;
}

.bibw ::-webkit-scrollbar-track {
	background-color: rgba(0,0,0,0); display: none;
}

.bibw ::-webkit-scrollbar, .bibw ::-webkit-scrollbar-thumb {
    background-color: rgba(0,0,0,0);
    color: white;
}

.bibw ::-webkit-scrollbar-track, .bibw ::-webkit-scrollbar, .bibw ::-webkit-scrollbar-thumb {
	border-color: #222;
	border: 0;
}

.bibw > footer#foot > input { 
	background: #0C0C0C; 
	border-radius: 50px; 
	font-family: "PokemonGB";    
	font-size: 16px !important;
	line-height: 50px;
	margin-right: 10px;
    margin-left: 25px;
    padding: 5px 25px;
}

.bibw #chat > div > div:last-child {
	color: #9AD5D8!important;
	opacity: 0;
    font-size: 10px;
    padding-right: 17px;
}	
.bibw footer > div {
	margin-right: 20px;
}

.bibw #chat > div > div:first-child > img:nth-child(1) {
	display: block;
	width: 100%;
	height: 100%;
	top: -15px;
    image-rendering: crisp-edges;
    margin-left: -2px;
}

/* targeting crhome */

@media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution:.001dpcm) {
    .bibw #chat > div > div:first-child > img:nth-child(1) {
		image-rendering: pixelated;
    }
}

/* targeting microsoft edge */

@supports (-ms-ime-align:auto) {
    .bibw #chat > div > div:first-child > img:nth-child(1) {
		image-rendering: pixelated;
    }
}


.bibw #chat > div > div > div {
	padding: 4px;
}

.bibw #chat > div > :first-child {
    width: 64px;
    max-width: 64px;
    max-height: 64px;
    text-align: center;
    border-radius: 0;
}

.bibw footer > div > .icon {
	border-radius: 50px;
}

.bibw footer > div > .icon:hover {
	background-color: #9AD5D8;
}
.bibw #overlay > #cover {
	background: rgba(0, 0, 0, .66);
}

.pokeball {
	width: 17px;
	height: 17px;
}
.sword {
	width: 25px;
	height: 25px;
	right: 225px;
	position: absolute;
	padding-top: 7px;
	display: none;
	z-index: 999;
}

ul > li > span:hover + .sword {
	display: block;
}

.bibw main #chat div > a {
	color: #1AC;
}

.bibw >  #main > #chat > .part > div > div {
	color: #9AD5D8!important;
}
.bibw >  #main > #chat > div:first-of-type {
    padding-top: 120px;
}

.bibw > main {
	font-family: "Open Sans";
	font-size: 17px;
}

#inventory_display {
    position: absolute;
    top: 0;
    opacity: 0;
    background: black;
    vertical-align: middle;
    color: #fff;
    text-align: center;
    border-radius: 30px;
    min-width: 200px;
    padding: 20px 10px 10px 20px;
    margin: 20px 150px 20px -1px;
    z-index: 2;
}

#chest:hover > #inventory_display {
    opacity: 1;
}

/* triangle at the bottom of the bubble */
#inventory_display::after {
  content: " ";
  position: absolute;
  top: 100%;
  left: 75%;
  margin-left: -10px;
  border-width: 15px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.item {
    position: relative;
    display: inline-block;
    margin: 10px 10px 30px 10px;
    width: 50px;
    height: 50px;
    vertical-align: middle;
    clear: right;
}

.item img {
    vertical-align: middle;
    display: inline-block;
    transition: none;
    transform: none;
}

